@@ -75,7 +75,6 @@ admin.caption.usergroup.searchRestrictions=Restricciones de b\u00fasqueda
 admin.caption.usergroup.url=URL
 admin.caption.usergroup.userfidield=Nombre del campo id de usuario
 admin.caption.usergroup.username=Nombre de usuario
-admin.caption.useversioning=Use versioning
 admin.caption.virtualwiki=Wiki Virtual
 admin.message.changesnotsaved=Changes HAVE NOT been saved
 admin.message.changessaved=Cambios guardados
