@@ -75,7 +75,6 @@ admin.caption.usergroup.searchRestrictions=Restrizioni ricerca
 admin.caption.usergroup.url=URL
 admin.caption.usergroup.userfidield=Nome campo per identificativo utente
 admin.caption.usergroup.username=Nome utente
-admin.caption.useversioning=Utilizza le versioni
 admin.caption.virtualwiki=Wiki Virtuale
 admin.message.changesnotsaved=Changes HAVE NOT been saved
 admin.message.changessaved=Modifiche registrate
