@@ -75,7 +75,6 @@ admin.caption.usergroup.searchRestrictions=Zoek beperkingen
 admin.caption.usergroup.url=URL
 admin.caption.usergroup.userfidield=Naam van gebruikersnaam veld
 admin.caption.usergroup.username=Gebruikersnaam
-admin.caption.useversioning=Versioning gebruiken
 admin.caption.virtualwiki=Virtual Wiki
 admin.message.changesnotsaved=Changes HAVE NOT been saved
 admin.message.changessaved=Wijzigingen bewaard
