@@ -74,7 +74,6 @@ admin.caption.usergroup.searchRestrictions=Restrykcje wyszukiwania
 admin.caption.usergroup.url=URL
 admin.caption.usergroup.userfidield=Nazwa pola Identyfikatora U\u017Cytkownika
 admin.caption.usergroup.username=Nazwa u\u017Cytkownika
-admin.caption.useversioning=U\u017Cyj wersji
 admin.caption.virtualwiki=Wirtualne Wiki
 admin.message.changesnotsaved=Zmiany NIE ZOSTA\u0141Y zapisane
 admin.message.changessaved=Zmiany zapisane
