@@ -75,7 +75,6 @@ admin.caption.usergroup.searchRestrictions=S\u00f6kbegr\u00e4nsningar
 admin.caption.usergroup.url=URL
 admin.caption.usergroup.userfidield=Namn p\u00e5 f\u00e4lt f\u00f6r anv\u00e4ndarnamn
 admin.caption.usergroup.username=Anv\u00e4ndarnamn
-admin.caption.useversioning=Anv\u00e4nd versionshantering
 admin.caption.virtualwiki=Virtuell Wiki
 admin.message.changesnotsaved=Changes HAVE NOT been saved
 admin.message.changessaved=\u00c4ndringar sparade
